v_utils_macros/tests/compile_fail/optional_fields_non_option.stderr
error: proc-macro derive panicked
 --> $DIR/v_utils_macros/tests/compile_fail/optional_fields_non_option.rs:4:17
  |
4 | #[derive(Debug, OptionalFieldsFromVecStr)]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: All fields must be of type Option<T>

error: aborting due to 1 previous error

